# BLPP_LLVM

./: BLPP.h  BLPPDB.h  BLPPDump.h  BLPPInstrumentation.h  README.md  blpp_if.h
BLPPAnalysis/: .BLPP.cpp.swp  BLPP.cpp  BLPPAnalysis.exports  BLPPDB.cpp  CMakeLists.txt  Makefile
BLPPDump/: BLPPDump.cpp  BLPPDump.exports  CMakeLists.txt  Makefile
PathProfiler/: BLPPInstrumentation.cpp  CMakeLists.txt  Makefile
PathProfiler/PPInfoSerializer/: CMakeLists.txt  Makefile  PPInfoSerializer.cpp
test/: loop.bc  loop.c  loop2.bc  loop2.c
